# vexaMd

./: .gitignore  CLAUDE.md  LICENSE  index.html  package-lock.json  package.json  playwright.config.js  sample.md  vite.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT_GUIDE.md  FEATURES.md  README.md  RELEASE_GUIDE.md  ROADMAP.md  RUST_TUTORIAL.md  SESSION-LOG.md  plugin-development.md  plugin-user-guide.md
docs/design/: auto-update.md
docs/troubleshooting/: README.md  mermaid-duplicate-rendering.md  mermaid-split-mode.md  toc-editor-clipping.md  zoom-global-instead-of-per-tab.md  zoom-scrollbar-shrink.md
src/: i18n.js  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: icons.js  toolbar.js
src/core/: dom.js  events.js  plugin-api.js  plugin-manager.js  plugin.js  store.js  text-utils.js
src/modules/editor/: editor-manager.js  editor.css  editor.js
src/modules/files/: drag-drop.js  file-handler.js  file-ops.js  files.css  recent-files.js
src/modules/image-modal/: image-modal.js
src/modules/markdown/: renderer.js
src/modules/notification/: notification.js
src/modules/plugins/: plugin-ui.css  plugin-ui.js
src/modules/presentation/: presentation-mode.js
src/modules/print/: print.js
src/modules/search/: search-manager.js  search.css  search.js
src/modules/session/: session.js
src/modules/shortcuts/: shortcuts.js
src/modules/status-bar/: status-bar.js
src/modules/tabs/: tab-manager.js  tabs.css  tabs.js
src/modules/theme/: theme-editor.js  theme-manager.js  theme-system.js  theme.css
src/modules/toc/: toc.css  toc.js
src/modules/ui/: help-menu.js  keyboard.js  settings.js  ui-texts.js  ui.css  view-mode.js  zoom.js
src/modules/updater/: updater.css  updater.js
src/modules/viewer/: markdown.js  presentation.js  syntax.css  viewer.css
src/modules/vmd/: vmd-key-ui.css  vmd-key-ui.js  vmd.js
src/modules/welcome/: welcome.js
src/modules/zoom/: zoom-manager.js
src/plugins/auto-toc-insert/: index.js  plugin.json
src/plugins/copy-as-html/: index.js  plugin.json
src/plugins/emoji-replace/: index.js  plugin.json
src/plugins/external-link-icon/: index.js  plugin.json
src/plugins/footnote/: index.js  plugin.json
src/plugins/highlight-search/: index.js  plugin.json
src/plugins/image-zoom/: index.js  plugin.json
src/plugins/mermaid/: index.js  plugin.json
src/styles/: animations.css  base.css  index.css  status-bar.css
src/utils/: helpers.js
(+6 files in other folders)
