[package]
name = "md-viewer"
version = "1.1.0"
description = "Ultra-lightweight Markdown Viewer"
authors = ["MD Viewer"]
edition = "2021"

[lib]
name = "md_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# devtools: 개발 시 F12 개발자도구 사용하려면 "devtools" 추가
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
